Bug 101121 - [12 Regression] 416.gamess grd2b.f does not finish building
Summary: [12 Regression] 416.gamess grd2b.f does not finish building
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 12.0
: P3 normal
Target Milestone: 12.0
Assignee: Richard Biener
URL:
Keywords: compile-time-hog
Depends on:
Blocks:
 
Reported: 2021-06-18 11:50 UTC by Richard Biener
Modified: 2021-06-21 09:07 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2021-06-18 00:00:00


Attachments
reduced testcase (2.19 KB, text/plain)
2021-06-18 13:28 UTC, Richard Biener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Biener 2021-06-18 11:50:10 UTC
With -Ofast -march=haswell -std=legacy -fno-aggressive-loop-optimizations this
is somewhere stuck in SLP build not making progress.
Comment 1 Richard Biener 2021-06-18 13:28:43 UTC
Created attachment 51035 [details]
reduced testcase

Reduced testcase - it must get still smaller but it only very slowly reduces now.
Comment 2 GCC Commits 2021-06-21 09:06:51 UTC
The master branch has been updated by Richard Biener <rguenth@gcc.gnu.org>:

https://gcc.gnu.org/g:90f78d5d86598f8cadacfb20d8d98c122a466599

commit r12-1670-g90f78d5d86598f8cadacfb20d8d98c122a466599
Author: Richard Biener <rguenther@suse.de>
Date:   Mon Jun 21 09:30:41 2021 +0200

    tree-optimization/101121 - avoid infinite SLP build
    
    The following plugs another hole where we cache a failed SLP build
    attempt with an all-success 'matches'.  It also adds checking that
    we don't do that.
    
    2021-06-21  Richard Biener  <rguenther@suse.de>
    
            PR tree-optimization/101121
            * tree-vect-slp.c (vect_build_slp_tree_2): To not fail fatally
            when we just lack a stmt with the desired op when doing permutation.
            (vect_build_slp_tree): When caching a failed SLP build attempt
            assert that at least one lane is marked as not matching.
    
            * gfortran.dg/pr101121.f: New testcase.
Comment 3 Richard Biener 2021-06-21 09:07:02 UTC
Should be fixed now.